--- a/src/styles.css
+++ b/src/styles.css
@@ -39,6 +39,7 @@
   border-radius: 8px;
   padding: 24px;
   margin: 40px 0;
+  min-height: 500px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
@@ -53,6 +54,7 @@
   border-radius: 8px;
   padding: 24px;
   margin: 40px 0;
+  min-height: 500px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
