--- a/packages/styles/styles.css
+++ b/packages/styles/styles.css
@@ -83,6 +83,7 @@
 .ProseMirror {
   outline: none;
   min-height: 100px;
+  white-space: pre-wrap;
 }
 
 /* ==================== EDITOR THEMES ==================== */
